[package]
name = "study"
version = "0.1.0"
authors = ["yamagata-akita <tiyduts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fn_pointer_vs_closure"
path = "src/fn_pointer_vs_closure.rs"

[[bin]]
name = "tuple"
path = "src/tuple.rs"

[[bin]]
name = "array"
path = "src/array.rs"