[package]
name = "user"
version = "0.1.0"
authors = ["yamagata-akita <tiyduts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "box"
path = "src/box.rs"

[[bin]]
name = "vec"
path = "src/vec.rs"
