[package]
name = "user"
version = "0.1.0"
authors = ["yamagata-akita <tiyduts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "box"
path = "src/box.rs"

[[bin]]
name = "vec"
path = "src/vec.rs"

[[bin]]
name = "boxed_slice"
path = "src/boxed_slice.rs"

[[bin]]
name = "hash_map"
path = "src/hash_map.rs"

[[bin]]
name = "string"
path = "src/string.rs"

[[bin]]
name = "range"
path = "src/range.rs"

[[bin]]
name = "result"
path = "src/result.rs"

[[bin]]
name = "type_alias"
path = "src/type_alias.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "struct_tuple"
path = "src/struct_tuple.rs"

[[bin]]
name = "struct_unit"
path = "src/struct_unit.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"
